[package]
name = "tedge_mapper"
version = "0.1.0"
edition = "2018"
authors = ["thin-edge.io team <info@thin-edge.io>"]
license = "Apache-2.0"
description = "tedge_mapper is the mapper that translates thin-edge.io data model to c8y/az data model."

[package.metadata.deb]
depends = "tedge"
maintainer-scripts = "configuration/debian/tedge_mapper"

[package.metadata.deb.systemd-units]
unit-scripts = "../../configuration/init/systemd"
unit-name = "tedge-mapper"
enable = false
start = false
stop-on-upgrade = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
az_mapper = { path = "../az_mapper" }
c8y_mapper = { path = "../c8y_mapper" }
c8y_translator_lib = {path = "../cumulocity/c8y_translator_lib" }
chrono = "0.4"
clock = {path = "../../common/clock" }
dm_mapper = { path = "../dm_mapper" }
env_logger = "0.8"
flockfile = {path = "../../common/flockfile" }
log = "0.4"
mapper_converter = { path = "../mapper" }
mqtt_client = {path = "../../common/mqtt_client" }
structopt = "0.3"
tedge_config = {path = "../../tedge_config" }
thin_edge_json = {path = "../../mapper/thin_edge_json"}
thiserror = "1.0"
tokio = { version = "1.1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes", "log"] }
tracing-subscriber = "0.2"
users = "0.11"

[dev-dependencies]
assert-json-diff = "2.0"
serde_json = "1.0"
assert_matches = "1.5"
tokio-test = "0.4"
