[package]
name = "tedge_mapper"
version = "0.2.0"
edition = "2018"
authors = ["thin-edge.io team <info@thin-edge.io>"]
license = "Apache-2.0"
description = "tedge_mapper is the mapper that translates thin-edge.io data model to c8y/az data model."

[package.metadata.deb]
depends = "tedge"
maintainer-scripts = "configuration/debian/tedge_mapper"
assets = [
    ["../../configuration/init/systemd/tedge-mapper-az.service", "/lib/systemd/system/tedge-mapper-az.service", "644"],
    ["../../configuration/init/systemd/tedge-mapper-c8y.service", "/lib/systemd/system/tedge-mapper-c8y.service", "644"],
    ["target/release/tedge_mapper", "/usr/bin/tedge_mapper", "755"],
]

[package.metadata.deb.systemd-units]
unit-scripts = "../../configuration/init/systemd"
enable = false
start = false
stop-on-upgrade = false

[dependencies]
anyhow = "1.0"
clock = {path = "../../common/clock" }
c8y_translator_lib = {path = "../cumulocity/c8y_translator_lib" }
tedge_config = {path = "../../tedge_config" }
thin_edge_json = {path = "../../mapper/thin_edge_json"}
chrono = "0.4"
env_logger = "0.8"
flockfile = {path = "../../common/flockfile" }
log = "0.4"
mqtt_client = {path = "../../common/mqtt_client" }
tokio = { version = "1.6", features = ["rt", "sync", "time"] }
tracing = { version = "0.1", features = ["attributes", "log"] }
tracing-subscriber = "0.2"
async-trait = "0.1"
thiserror = "1.0"
tedge_users = { path = "../../common/tedge_users" }

[dev-dependencies]
assert-json-diff = "2.0"
serde_json = "1.0"
assert_matches = "1.5"
tokio-test = "0.4"
