[package]
name = "thin_edge_json"
version = "0.2.1"
authors = ["Software AG <thin-edge-team@softwareag.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clock = { path = "../../common/clock" }
json = "0.12"
json-writer = { path = "../../common/json_writer" }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
mockall = "0.10"
pretty_assertions = "0.7"
proptest = "1.0"
