[package]
name = "thin_edge_json"
version = "0.3.1"
authors = ["Software AG <thin-edge-team@softwareag.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clock = { path = "../../common/clock" }
json-writer = { path = "../../common/json_writer" }
thiserror = "1.0"
serde = "1"
serde_json = "1"

[dev-dependencies]
anyhow = "1.0"
mockall = "0.10"
proptest = "1.0"
criterion = "0.3"
walkdir = "2"
stats_alloc = "0.1.8"

[[bench]]
name = "parsing"
harness = false
