[package]
name = "thin_edge_json"
version = "0.4.2"
authors = ["thin-edge.io team <info@thin-edge.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json-writer = { path = "../../common/json_writer" }
serde = "1"
serde_json = "1"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing", "serde"] }

[dev-dependencies]
anyhow = "1.0"
clock = { path = "../../common/clock" }
criterion = "0.3"
mockall = "0.10"
proptest = "1.0"
stats_alloc = "0.1"
time = { version = "0.3", features = ["macros"] }
walkdir = "2"

[[bench]]
name = "parsing"
harness = false
