[package]
name = "mqtt_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["sync"] }
rumqttc = "0.3.0"

[dev-dependencies]
futures = "0.3"
futures-timer = "3.0"
tokio-test = "0.3.0"
log = "0.4.11"
env_logger = "0.8.2"
async-log = "2.0.0"
rand = "0.7.3"
json = "0.12.4"
