[package]
name = "c8y-configuration-plugin"
version = "0.8.1"
authors = ["thin-edge.io team <info@thin-edge.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "Apache-2.0"
description = "Thin-edge device configuration management for Cumulocity"
homepage = "https://thin-edge.io"
repository = "https://github.com/thin-edge/thin-edge.io"

[package.metadata.deb]
replaces = "c8y_configuration_plugin"
conflicts = "c8y_configuration_plugin (<= 0.8.1)"
breaks = "c8y_configuration_plugin (<= 0.8.1)"
maintainer-scripts = "../../configuration/debian/c8y-configuration-plugin"
assets = [
    ["../../configuration/init/systemd/c8y-configuration-plugin.service", "/lib/systemd/system/c8y-configuration-plugin.service", "644"],
    ["target/release/c8y-configuration-plugin", "/usr/bin/c8y-configuration-plugin", "755"],
]

# Required for DEBHELPER
[package.metadata.deb.systemd-units]

[dependencies]
anyhow = "1.0"
c8y_api = { path = "../../crates/core/c8y_api" }
clap = { version = "3.2", features = ["cargo", "derive"] }
csv = "1.1"
download = { path = "../../crates/common/download" }
futures = "0.3"
mqtt_channel = { path = "../../crates/common/mqtt_channel" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tedge_api = { path = "../../crates/core/tedge_api" }
tedge_config = { path = "../../crates/common/tedge_config" }
tedge_utils = { path = "../../crates/common/tedge_utils", features = ["logging", "fs-notify"] }
thiserror = "1.0"
tokio = { version = "1.9", default_features = false, features = [ "fs", "io-util", "macros", "rt-multi-thread", "signal", "time"] }
toml = "0.5"
tracing = { version = "0.1", features = ["attributes", "log"] }

[dev-dependencies]
assert_matches = "1.5"
mockall = "0.11"
mockito = "0.31"
mqtt_tests = { path = "../../crates/tests/mqtt_tests" }
serial_test = "0.8"
tedge_test_utils = { path = "../../crates/tests/tedge_test_utils" }
test-case = "2.2"
tokio = { version = "1.9", default_features = false, features = ["test-util"] }
toml = "0.5"
