[package]
name = "c8y-configuration-plugin"
description = "Thin-edge device configuration management for Cumulocity"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.deb]
replaces = "c8y_configuration_plugin"
conflicts = "c8y_configuration_plugin (<= 0.8.1)"
breaks = "c8y_configuration_plugin (<= 0.8.1)"
maintainer-scripts = "../../configuration/debian/c8y-configuration-plugin"
assets = [
    [
        "../../configuration/init/systemd/c8y-configuration-plugin.service",
        "/lib/systemd/system/c8y-configuration-plugin.service",
        "644",
    ],
    [
        "target/release/c8y-configuration-plugin",
        "/usr/bin/c8y-configuration-plugin",
        "755",
    ],
]

# Required for DEBHELPER
[package.metadata.deb.systemd-units]

[dependencies]
anyhow = "1.0"
c8y_config_manager = { path = "../../crates/extensions/c8y_config_manager" }
c8y_http_proxy = { path = "../../crates/extensions/c8y_http_proxy" }
clap = { version = "3.2", features = ["cargo", "derive"] }
tedge_actors = { path = "../../crates/core/tedge_actors" }
tedge_config = { path = "../../crates/common/tedge_config" }
tedge_file_system_ext = { path = "../../crates/extensions/tedge_file_system_ext" }
tedge_health_ext = { path = "../../crates/extensions/tedge_health_ext" }
tedge_http_ext = { path = "../../crates/extensions/tedge_http_ext" }
tedge_mqtt_ext = { path = "../../crates/extensions/tedge_mqtt_ext" }
tedge_signal_ext = { path = "../../crates/extensions/tedge_signal_ext" }
tedge_timer_ext = { path = "../../crates/extensions/tedge_timer_ext" }
tedge_utils = { path = "../../crates/common/tedge_utils" }
tokio = { version = "1.23", features = ["rt", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["attributes", "log"] }
