[package]
name = "c8y-firmware-plugin"
description = "thin-edge.io device firmware management for Cumulocity"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
c8y_firmware_manager = { workspace = true }
clap = { workspace = true }
tedge_actors = { workspace = true }
tedge_api = { workspace = true }
tedge_config = { workspace = true }
tedge_downloader_ext = { workspace = true }
tedge_health_ext = { workspace = true }
tedge_mqtt_ext = { workspace = true }
tedge_signal_ext = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
