[package]
name = "c8y_log_plugin"
version = "0.7.2"
authors = ["thin-edge.io team <info@thin-edge.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "Apache-2.0"
description = "Thin-edge device log file retriever for Cumulocity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.deb]
maintainer-scripts = "../../configuration/debian/c8y_log_plugin"
assets = [
    ["../../configuration/init/systemd/c8y-log-plugin.service", "/lib/systemd/system/c8y-log-plugin.service", "644"],
    ["target/release/c8y_log_plugin", "/usr/bin/c8y_log_plugin", "755"],
]

[dependencies]
anyhow = "1.0"
c8y_api = { path = "../../crates/core/c8y_api" }
c8y_smartrest = { path = "../../crates/core/c8y_smartrest" }
clap = { version = "3.0", features = ["cargo", "derive"] }
csv = "1.1"
easy_reader = "0.5"
glob = "0.3"
inotify = "0.10"
mqtt_channel = { path = "../../crates/common/mqtt_channel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tedge_config = { path = "../../crates/common/tedge_config" }
tedge_utils = { path = "../../crates/common/tedge_utils", features = ["logging"] }
time = { version = "0.3" }
thiserror = "1.0"
tokio = { version = "1.9", default_features = false, features = [ "fs", "io-util", "macros", "rt-multi-thread","signal"] }
toml = "0.5"
tracing = { version = "0.1", features = ["attributes", "log"] }

[dev-dependencies]
assert_matches = "1.5"
filetime = "0.2"
mockall = "0.11"
tempfile = "3.3"
test-case = "2.0"
serial_test = "0.6"
