[package]
name = "c8y-log-plugin"
description = "Thin-edge device log file retriever for Cumulocity"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.deb]
replaces = "c8y_log_plugin"
conflicts = "c8y_log_plugin (<= 0.8.1)"
breaks = "c8y_log_plugin (<= 0.8.1)"
maintainer-scripts = "../../configuration/debian/c8y-log-plugin"
assets = [
    [
        "../../configuration/init/systemd/c8y-log-plugin.service",
        "/lib/systemd/system/c8y-log-plugin.service",
        "644",
    ],
    [
        "target/release/c8y-log-plugin",
        "/usr/bin/c8y-log-plugin",
        "755",
    ],
]

# Required for DEBHELPER
[package.metadata.deb.systemd-units]

[dependencies]
anyhow = "1.0"
c8y_api = { path = "../../crates/core/c8y_api" }
clap = { version = "3.2", features = ["cargo", "derive"] }
csv = "1.1"
easy_reader = "0.5"
glob = "0.3"
mqtt_channel = { path = "../../crates/common/mqtt_channel" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tedge_api = { path = "../../crates/core/tedge_api" }
tedge_config = { path = "../../crates/common/tedge_config" }
tedge_utils = { path = "../../crates/common/tedge_utils", features = [
    "logging",
    "fs-notify",
] }
thiserror = "1.0"
time = { version = "0.3" }
tokio = { version = "1.23", default_features = false, features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "signal",
] }
toml = "0.5"
tracing = { version = "0.1", features = ["attributes", "log"] }

[dev-dependencies]
assert_matches = "1.5"
filetime = "0.2"
mockall = "0.11"
serial_test = "0.8"
tempfile = "3.3"
test-case = "2.2"
