[package]
name = "c8y-remote-access-plugin"
description = "Thin-edge.io plugin for the Cumulocity IoT's Cloud Remote Access feature"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.deb]
assets = [
    [
        "target/release/c8y-remote-access-plugin",
        "/usr/bin/c8y-remote-access-plugin",
        "755",
    ],
]
maintainer-scripts = "../../configuration/debian/c8y-remote-access-plugin"

[dependencies]
async-compat = "0.2.1"
async-tungstenite = { version = "0.18.0", features = [
    "tokio-runtime",
    "tokio-rustls-native-certs",
] }
base64 = "0.13.1"
c8y_api = { path = "../../crates/core/c8y_api" }
camino = "1.1.4"
clap = { version = "4.1.4", features = ["cargo", "derive"] }
csv = "1.1.6"
futures = "0.3.25"
futures-util = "0.3.25"
http = "0.2.8"
miette = { version = "5.5.0", features = ["fancy"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tedge_config = { path = "../../crates/common/tedge_config" }
tedge_utils = { path = "../../crates/common/tedge_utils" }
thiserror = "1.0.38"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "fs",
    "time",
    "process",
] }
tungstenite = "0.17.3"
url = "2.3.1"
ws_stream_tungstenite = "0.9.0"

[dev-dependencies]
rstest = "0.16.0"
tempfile = "3.5.0"
