[package]
name = "c8y-remote-access-plugin"
description = "Thin-edge.io plugin for the Cumulocity IoT's Cloud Remote Access feature"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-compat = { workspace = true }
async-tungstenite = { workspace = true }
base64 = { workspace = true }
c8y_api = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
miette = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tedge_config = { workspace = true }
tedge_utils = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "fs",
    "time",
    "process",
] }

url = { workspace = true }
ws_stream_tungstenite = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
