[package]
name = "tedge_apama_plugin"
version = "0.5.1"
authors = ["thin-edge.io team <info@thin-edge.io>"]
edition = "2018"
license = "Apache-2.0"
description = "thin.edge.io plugin for installing apama projects"

[package.metadata.deb]
assets = [
    ["target/release/tedge_apama_plugin", "/etc/tedge/sm-plugins/apama", "755"],
]

[dependencies]
structopt = "0.3"
thiserror = "1.0"
zip = "0.5"
roxmltree = "0.14"

[dev-dependencies]
tempfile = "3.2"
