[package]
name = "tedge_apama_plugin"
version = "0.7.1"
authors = ["thin-edge.io team <info@thin-edge.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "Apache-2.0"
description = "thin.edge.io plugin for installing apama projects"

[package.metadata.deb]
assets = [
    ["target/release/tedge_apama_plugin", "/etc/tedge/sm-plugins/apama", "755"],
]

[dependencies]
clap = { version = "3", features = ["derive"] }
thiserror = "1.0"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
roxmltree = "0.14"

[dev-dependencies]
tedge_test_utils = { path = "../../crates/tests/tedge_test_utils" }
