[package]
name = "tedge-apama-plugin"
version = "0.8.1"
authors = ["thin-edge.io team <info@thin-edge.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "Apache-2.0"
description = "thin.edge.io plugin for installing apama projects"
homepage = "https://thin-edge.io"
repository = "https://github.com/thin-edge/thin-edge.io"

[package.metadata.deb]
replaces = "tedge_apama_plugin"
conflicts = "tedge_apama_plugin (<= 0.8.1)"
breaks = "tedge_apama_plugin (<= 0.8.1)"
assets = [
    ["target/release/tedge-apama-plugin", "/etc/tedge/sm-plugins/apama", "755"],
]

[dependencies]
clap = { version = "3", features = ["derive"] }
thiserror = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
roxmltree = "0.14"

[dev-dependencies]
tedge_test_utils = { path = "../../crates/tests/tedge_test_utils" }
